ros2_study/log/build_2025-11-11_16-40-19/my_first_package/stderr.log
  File "/home/hyh/ros2_study/install/my_first_package/lib/python3.10/site-packages/my_first_package/my_service_server.py", line 8
    		super(0.__init__('multi_spawn')
    		       ^
SyntaxError: invalid decimal literal

